--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "From the Desk of Felipe Cabargas"
+title: "Views are my own - Felipe Cabargas"
 email: ""
 description: "A personal blog sharing insights on artificial intelligence, strategic thinking and product management."
 # The base URL ensures that relative links work whether the site is hosted at the root or a sub‑directory.
